lab 4: add Swagger cookie auth security definitions
